zero-trust-gitops-platform/policies/tests/namespace-resourcequota/generated-resource.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resourcequota
  namespace: demo-api
spec:
  hard:
    requests.cpu: "4"
    requests.memory: 8Gi
    limits.cpu: "8"
    limits.memory: 16Gi
    pods: "20"
